force-app/main/default/objects/Loan__c/Loan__c.object-meta.xml
<CustomObject>
    <label>Loan</label>
    <nameField>
        <displayFormat>{MM}-{DD}-{YYYY}-{00000}</displayFormat>
        <label>Loan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>