force-app/main/default/objects/Loan__c/fields/Book_Copy__c.field-meta.xml
<CustomField>
    <fullName>Book_Copy__c</fullName>
    <inlineHelpText>What was loaned?</inlineHelpText>
    <label>Book Copy</label>
    <referenceTo>Book_Copy__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>