force-app/main/default/objects/Loan__c/fields/Book_Title__c.field-meta.xml
<CustomField>
    <fullName>Book_Title__c</fullName>
    <formula>Book_Copy__r.Book__r.Name</formula>
    <label>Book Title</label>
    <type>Text</type>
</CustomField>