force-app/main/default/objects/Loan__c/fields/Checkout__c.field-meta.xml
<CustomField>
    <fullName>Checkout__c</fullName>
    <inlineHelpText>When was this book checked out?</inlineHelpText>
    <label>Checkout</label>
    <required>true</required>
    <type>Date</type>
</CustomField>