force-app/main/default/objects/Loan__c/fields/Due__c.field-meta.xml
<CustomField>
    <fullName>Due__c</fullName>
    <inlineHelpText>When is this due back?</inlineHelpText>
    <label>Due</label>
    <type>Date</type>
</CustomField>