force-app/main/default/objects/Loan__c/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <formula>IF( (Returned__c == FALSE &amp;&amp; (TODAY()- Due__c &gt; 0)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the book has not been returned yet and it is past the loan&apos;s due date, then the loan is overdue.</inlineHelpText>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>