force-app/main/default/objects/Loan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Book_Copy__c</columns>
    <columns>Book_Title__c</columns>
    <columns>Borrower__c</columns>
    <columns>Checkout__c</columns>
    <columns>Due__c</columns>
    <columns>Returned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>