force-app/main/default/objects/Loan__c/listViews/Current_Loans.listView-meta.xml
<ListView>
    <fullName>Current_Loans</fullName>
    <columns>NAME</columns>
    <columns>Book_Copy__c</columns>
    <columns>Book_Title__c</columns>
    <columns>Borrower__c</columns>
    <columns>Checkout__c</columns>
    <columns>Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Returned__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Current Loans</label>
</ListView>